--- a/.github/workflows/hello.yml
+++ b/.github/workflows/hello.yml
@@ -1,9 +1,14 @@
-name: Hello                       # ワークフロー名
-on: push                          # イベント（プッシュ時に起動）
-jobs:                             # ジョブの定義
-  hello:                          # ジョブID
-    runs-on: ubuntu-latest        # ランナー（Ubuntuで実行）
-    steps:                        # ステップの定義
-      - run: echo "Hello, world"  # シェルコマンドの実行
-      - uses: actions/checkout@v4 # アクションの呼び出し
-
+name: Manual
+on:
+  workflow_dispatch:                       # 手動実行イベント
+    inputs:
+      greeting:                            # 入力パラメータ名
+        type: string                       # データ型（文字列）
+        default: Hello                     # 入力パラメータのデフォルト値
+        required: true                     # 入力パラメータの必須フラグ
+        description: A cheerful word       # 入力パラメータの概要
+jobs:
+  run:
+    runs-on: ubuntu-latest
+    steps:
+      - run: echo "${{ inputs.greeting }}" # 入力パラメータ「greeting」の参照
