--- a/.github/workflows/link-checker.yml
+++ b/.github/workflows/link-checker.yml
@@ -2,11 +2,13 @@ name: linkchecker
 on: 
   workflow_dispatch:
 jobs:
-  runs-on: ubuntu-latest
-  steps:
-    - name: Check for broken links
-      id: link-report
-      uses: elliotforbes/broken-link-checker@1.0.2
-      with:
-        url: "https://tutorialedge.net"
-        cmd_params: "--exclude=google.com --buffer-size=8192 --max-connections=10 --color=always --verbose"
+  broken_link_checker_job:
+    runs-on: ubuntu-latest
+    name: Check for broken links
+    steps:
+      - name: Check for broken links
+        id: link-report
+        uses: elliotforbes/broken-link-checker@1.0.2
+        with:
+          url: "https://tutorialedge.net"
+          cmd_params: "--exclude=google.com --buffer-size=8192 --max-connections=10 --color=always --verbose"
