リポジトリIDを追加

--- a/.github/workflows/context.yml
+++ b/.github/workflows/context.yml
@@ -9,5 +9,6 @@ jobs:
           echo "### Hello world! :rocket:" >> $GITHUB_STEP_SUMMARY
           echo "" >> $GITHUB_STEP_SUMMARY # this is a blank line
           echo "github.actor: ${{ github.actor }}" >> $GITHUB_STEP_SUMMARY # this is a blank line
+          echo "github.actor: ${{ github.repository_id }}" >> $GITHUB_STEP_SUMMARY # this is a blank line
 
 
