スペースで表示されるか

--- a/.github/workflows/context_inter.yml
+++ b/.github/workflows/context_inter.yml
@@ -6,4 +6,5 @@ jobs:
         env: 
             Actor: ${{ github.actor }}
         steps: 
-            - run: echo "${ACTOR}" >> $GITHUB_STEP_SUMMARY
+            - run: |
+                echo "${ACTOR}" >> $GITHUB_STEP_SUMMARY
