--- a/.github/workflows/skip.yaml
+++ b/.github/workflows/skip.yaml
@@ -5,4 +5,4 @@ jobs:
     if: ${{ github.actor == 'octocat' }} # octocatアカウント以外は実行をスキップ
     runs-on: ubuntu-latest
     steps:
-      - run echo "Hello"
+      - run: echo "Hello"
